--- a/backward-design/index.html
+++ b/backward-design/index.html
@@ -1,25 +1,24 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Untitled Document</title>
-
-	
+	<meta charset="UTF-8">
+	<title>How to make boba tea?</title>
 </head>
 
 <body>
 	<div style="text-align:center;width:100%">
-		<div style="text-align:left;margin:25%">
-			<font face="Helvetica">
-			<h1>How to apply for gradschools?</h1>
-			<h3>Let's do it step by step :)</h3>
+		<font face="Helvetica">
+		<a href="">Previous</a> <a href="">Home</a>
+		<div style="text-align:left;margin:15%">
+			<h1 style="font-size:50pt">How to make boba tea?</h1>
+			<h1>Let's do it step by step :)</h1>
 			<ol>
-				<li>Making a point</li>
-				<li>Making a point</li>
-				<li>Making a point</li>
+				<li><a href="">Make the pearl boba</a></li>
+				<li><a href="">Make the tea</a></li>
+				<li><a href="">Serve the boba tea</a></li>
 			</ol>
-			</font>
 		</div>
+		</font>
 	</div>
 </body>
 </html>
