--- a/backward-design/step1/Untitled-1.html
+++ b/backward-design/step1/Untitled-1.html
@@ -1,24 +1,26 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Untitled Document</title>
-
-	
+	<meta charset="UTF-8">
+	<title>Step 01 | How to make boba tea?</title>
 </head>
 
 <body>
 	<div style="text-align:center;width:100%">
-		<div style="text-align:left;margin:25%">
-			<font face="Helvetica">
-			<h1>How to apply for gradschools?</h1>
-			<h3>Let's do it step by step :)</h3>
-			<ol>
-				<li>Making a point</li>
-				<li>Making a point</li>
-				<li>Making a point</li>
-			</ol>
-			</font>
+		<font face="Arial">
+		<a href="">Previous</a> <a href="https://kingupdollar.github.io/backward-design/">Home</a> <a href="">Next</a>
+		</font>
+		<div style="text-align:left;margin:15%">
+			<font face="Arial">
+			<h1>Step 01: Make the pearl boba</h1>
+			<p>To prepare the pearl boba, you will need to follow the procedure below:</p>
+			</font><ol>
+				<li><font face="Arial"><b>Skill 1:</b> Boiling the pearls<br>
+					Add the pearls into and boil them. Stir until they begin to float, and then turn the heat down to medium and cook for 40 minutes, stirring occasionally.</font></li>
+				<font face="Arial"><br>
+				<li><b>Skill 2:</b> Sugar coating<br>
+					Cool down and drain pearls, and mix them in the honey and fully coat. Set aside for 5 minutes.</li></font>
+			</ol> 
 		</div>
 	</div>
 </body>
