--- a/backward-design/index.html
+++ b/backward-design/index.html
@@ -7,8 +7,7 @@
 
 <body>
 	<div style="text-align:center;width:100%">
-		<font face="Helvetica">
-		<a href="">Previous</a> <a href="">Home</a>
+		<font face="Arial">
 		<div style="text-align:left;margin:15%">
 			<h1 style="font-size:50pt">How to make boba tea?</h1>
 			<h1>Let's do it step by step :)</h1>
