--- a/backward-design/index.html
+++ b/backward-design/index.html
@@ -12,7 +12,7 @@
 			<h1 style="font-size:50pt">How to make boba tea?</h1>
 			<h1>Let's do it step by step :)</h1>
 			<ol>
-				<li><a href="">Make the pearl boba</a></li>
+				<li><a href="https://kingupdollar.github.io/backward-design/step1/">Make the pearl boba</a></li>
 				<li><a href="">Make the tea</a></li>
 				<li><a href="">Serve the boba tea</a></li>
 			</ol>
