--- a/backward-design/index.html
+++ b/backward-design/index.html
@@ -13,8 +13,8 @@
 			<h1>Let's do it step by step :)</h1>
 			<ol>
 				<li><a href="https://kingupdollar.github.io/backward-design/step1/">Make the pearl boba</a></li>
-				<li><a href="">Make the tea</a></li>
-				<li><a href="">Serve the boba tea</a></li>
+				<li><a href="https://kingupdollar.github.io/backward-design/step2/">Make the tea</a></li>
+				<li><a href="https://kingupdollar.github.io/backward-design/step3/">Serve the boba tea</a></li>
 			</ol>
 		</div>
 		</font>
