--- a/backward-design/step1/index.html
+++ b/backward-design/step1/index.html
@@ -16,7 +16,7 @@
 			<p>To prepare the pearl boba, you will need to follow the procedure below:</p>
 			<ol>
 				<li><b>Skill 1:</b> Boiling the pearls<br>
-					Add the pearls into and boil them. Stir until they begin to float, and then turn the heat down to medium and cook for 40 minutes, stirring occasionally.</font></li><br>
+					Add the pearls into and boil them. Stir until they begin to float, and then turn the heat down to medium and cook for 40 minutes, stirring occasionally.</li><br>
 				<li><b>Skill 2:</b> Sugar coating<br>
 					Cool down and drain pearls, and mix them in the honey and fully coat. Set aside for 5 minutes.</li></font>
 			</ol>
