--- a/backward-design/step3/index.html
+++ b/backward-design/step3/index.html
@@ -20,7 +20,7 @@
 				<li><b>Skill 2:</b> Adding a wide straw<br>
 					Sucking the pearls with the straw is an indespensable experience while having boba tea. Thus, remember to use a <em>wide straw!</em></li>
 			</ol>
-				<p><em>Disclaimer: Above-mentioned tips to drink boba tea are my own personal insist. Feel free to try another method. Maybe you would discover Boba Tea: 3D The Experience.</em></p>
+				<p><em>Disclaimer: Above-mentioned tips to drink boba tea are my own personal insistence. Feel free to try another method. Maybe you would discover Boba Tea: 3D The Experience.</em></p>
 			</font>
 		</div>
 	</div>
