--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Mozilla is cool</h1>
+    <h1 id="betterH1">Mozilla is cool</h1>
     <p id="myPara">Our getElementById test</p>
     <button onclick="changeColor('blue');">blue</button>
     <button onclick="changeColor('red');">red</button>
