--- a/flashcards/click/index.html
+++ b/flashcards/click/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Flashcards Quizzz</title>
+  </head>
+  <body>
+    
+
+
 <p>Taiwan Trivia Quizzz</p>
 <button id="b2" onclick="displayQuestion(event);">Question</button>
 <label id="question"></label>
@@ -49,3 +59,6 @@ function displayAnswer(event) {
 }
 
 </script>
+
+  </body>
+</html>
