--- a/flashcards/hover/index.html
+++ b/flashcards/hover/index.html
@@ -18,15 +18,15 @@
   let questions = [
   {
   "question": "Question 1: What is the highest building in Taiwan?",
-  "answer": "Answer: Taipei 101",
+  "answer": "Taipei 101",
   },
   {
   "question": "Question 2: What is the capital city of Taiwan?",
-  "answer": "Answer: Taipei City",
+  "answer": "Taipei City",
   },
   {
   "question": "Question 3: How much is Taiwan's population?",
-  "answer": "Answer: 23 million",
+  "answer": "23 million",
   }
 ];
   
