--- a/flashcards/images/index.html
+++ b/flashcards/images/index.html
@@ -12,7 +12,7 @@
 </br></br>
 <p>Answer:</p>
 <p id="answer">Hover on the question statement to view the answer.</p>
-<img id="answerImage"></img>
+<img id="answerImage" width="20%"></img>
  
 <script>
   //making question-answer objects in an array
