--- a/flashcards/hover/index.html
+++ b/flashcards/hover/index.html
@@ -3,16 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Flashcards Quizzz</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
-  <body>
+<body style="background-color: #F0F0F0; color:#4F4F4F; font-family: 'Roboto', sans-serif;">
+   <div style="margin:5% 25%; border-radius:10px; box-shadow:2px 2px 20px #9D9D9D; background-color: #FFFFFF; min-height: 200px">
+     <div style="padding:10px 40px"> 
 
-<p>Taiwan Trivia Quizzz</p>
-<button id="b2" onclick="displayQuestion(event);">Click Here for New question</button>
+<h2 align="center">Taiwan Trivia Quizzz</h2>
+<button id="b2" onclick="displayQuestion(event);" style="border:0; color:#FFFFFF; background-color:#4F4F4F; width:200px; height:30px; border-radius:3px;">Click Here for New question</button>
 <label id="question" onmouseover="displayAnswer(event);"></label>
 </br></br>
-<p>Answer:</p>
+<p><b>Answer:</b></p>
 <p id="answer">Hover on the question statement to view the answer.</p>
  
+</div>
+  </div>
+
 <script>
   //making question-answer objects in an array
   let questions = [
