--- a/flashcards/images/index.html
+++ b/flashcards/images/index.html
@@ -17,7 +17,7 @@
 </br></br>
     <p><b>Answer:</b></p>
 <p id="answer">(Tips: hover on the question statement to view the answer.)</p>
-<img id="answerImage" width="20%"></img>
+<img id="answerImage" width="70%" align="center"></img>
  
   </div>
 </div>
