--- a/flashcards/images/index.html
+++ b/flashcards/images/index.html
@@ -13,8 +13,8 @@
 
 <h2 align="center">A Happy Math Quizzz</h2>
 
-<p id="question" onmouseover="displayAnswer(event);" align="center">Question</p>
-<p id="answer" onmouseover="notDisplayAnswer(event);" align="center">Answer</p>
+<p id="question" onmouseover="displayAnswer(event);">Question</p>
+<p id="answer" onmouseover="notDisplayAnswer(event);">Answer</p>
 <img id="answerImage" width="100%" onmouseover="displayQuestion(event);" ></img>
  
   </div>
