--- a/flashcards/hover/index.html
+++ b/flashcards/hover/index.html
@@ -12,11 +12,10 @@
      <div style="padding:10px 40px"> 
 
 <h2 align="center">Taiwan Trivia Quizzz</h2>
-<button id="b2" onclick="displayQuestion(event);" style="border:0; color:#FFFFFF; background-color:#4F4F4F; width:200px; height:30px; border-radius:3px;">Click Here for New question</button>
-<label id="question" onmouseover="displayAnswer(event);"></label>
-</br></br>
-<p><b>Answer:</b></p>
-<p id="answer">(Tips: hover on the question statement to view the answer)</p>
+</br>
+<label id="question" onmouseover="displayQuestion(event);">Question</label>
+</br>
+<p id="answer" onmouseover="displayAnswer(event);">Answer</p>
  
 </div>
   </div>
@@ -40,20 +39,23 @@
   
   //declare a variable to count the number of the clicking behavior
 let count1=0;
-let count2=0;
+
 
  //the function to iterate the question statement
 function displayQuestion(event) {
   document.getElementById("question").innerHTML = questions[count1%3].question;
-  document.getElementById("answer").innerHTML = "(Tips: hover on the question statement to view the answer)";
+  document.getElementById("answer").innerHTML = "View answer";
   ++count1;
-  count2=count1-1;
 }
   
  //the function to show the corresponding answer
 function displayAnswer(event) {
-  document.getElementById("answer").innerHTML = questions[count2%3].answer;
-
+  if (count1===0){
+    document.getElementById("answer").innerHTML = "(Please view the question first.)";
+  }
+  else{
+    document.getElementById("answer").innerHTML = questions[(count1-1)%3].answer;
+  }
   
 }
 
