--- a/flashcards/click/index.html
+++ b/flashcards/click/index.html
@@ -12,12 +12,12 @@
      <div style="padding:10px 40px"> 
 
 
-<h2 align="center">Taiwan Triva Quiz</h2>
-<button id="b2" onclick="displayQuestion(event);" style="border:0; color:#FFFFFF; background-color:#4F4F4F; width:100px; height:30px; border-radius:3px;">Question</button>
-<label id="question"></label>
-</br></br>
-<button onclick="displayAnswer(event);" style="border:0; color:#FFFFFF; background-color:#4F4F4F; width:100px; height:30px; border-radius:3px;">Answer</button>
-<label id="answer"></label>
+<h2 align="center">Taiwan Triva Quiz</h2></br>
+
+<p id="question" onclick="displayAnswer(event);">Question</p>
+
+
+<p id="answer" onclick="displayQuestion(event);">Answer</p>
  
     </div>
   </div>
@@ -44,23 +44,26 @@ let count2=0;
 
  //the function to iterate the question statement
 function displayQuestion(event) {
-  document.getElementById("question").innerHTML = questions[count1%3].question;
-  document.getElementById("answer").innerHTML = "";
-  ++count1;
- //adjusting the display of the answer 
- count2=count1-1;
+  if (count1===0){
+    document.getElementById("answer").innerHTML = "(Tips: click on the question to view the first question)";
+  }
+  else if (count2===count1){
+    document.getElementById("question").innerHTML = questions[count1%3].question;
+    document.getElementById("answer").innerHTML = "(Tips: click on the question statement to view the answer)";
+    ++count1;
+  }
 }
  //the function to iterate the answer
 function displayAnswer(event) {
- //showing answer corresponding to the question
-  if (count1===count2+1){
-    document.getElementById("answer").innerHTML = questions[count2%3].answer;
-    count2=count1;
+  if (count1===0){
+    document.getElementById("question").innerHTML = questions[count1%3].question;
+    document.getElementById("answer").innerHTML = "(Tips: click <b>again</b> on the question statement to view the answer)";
+    ++count1;
   }
- //asking the user to click the question button first
-  else {
-    document.getElementById("answer").innerHTML = "Please click the question first.";
-    count2=count1;
+ //showing answer corresponding to the question
+  else if (count1===count2+1){
+    document.getElementById("answer").innerHTML = questions[count2%3].answer;
+    ++count2;
   }
 }
 
