--- a/json/index.html
+++ b/json/index.html
@@ -2,18 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-
-    <title>Our superheroes</title>
-
-    <link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Meowwwww</title>
+    <!-- using Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
 
-  <body>
-      <!-- This is where you fill the title and hometown information on the page -->
-
+  <body style="font-family: 'Roboto'; size: 15pt; font-size: 30px; color:#4F4F4F;">
+    <!-- Adjusting typography -->
+    <div style="margin:15% 25%;">
+      <!-- Adding the cats and kittens info inside the section -->
       <section>
       </section>
-    
+    </div>
+    <script src="./scripts/cats.js"></script>
   </body>
 </html>
