--- a/final-project/lessons/lesson2.html
+++ b/final-project/lessons/lesson2.html
@@ -11,7 +11,7 @@
 
 <body>
   <div style="border-bottom-style: solid; border-width: 1px;">
-    <button class="button2">← Leave Course</button>
+    <input type="button" value="← Leave Course" class="button2" onclick="location.href='https://kingupdollar.github.io/final-project/'">
   </div>
   
   <div style="font-family: 'Roboto'; max-width: 1000px; margin:0px auto;">
@@ -73,8 +73,8 @@ Here are some common symptoms of retinal detachment:</p>
     </div>
     
     <div style="text-align:center;">
-      <button class="button">Previous</button>
-      <button class="button">Next</button>
+      <input type="button" value="← Previous" class="button" onclick="location.href='https://kingupdollar.github.io/final-project/lessons/lesson1.html'">
+      <input type="button" value="Next →" class="button" onclick="location.href='https://kingupdollar.github.io/final-project/lessons/lesson3.html'">
     </div>
   
   </div>
