--- a/final-project/lessons/lesson2.html
+++ b/final-project/lessons/lesson2.html
@@ -32,7 +32,7 @@
 	  <p>From the previous page, we have learned that the retina is the light-sensitive layer of tissue of the eye attached to the backward of the inner side of the eyeball and connected to the optic nerve to transmit the stimuli.<br><br>
 Retinal detachment, as its name implies, is a disorder of the eye in which the retina separates from the layer underneath, which means it is detached from the inner side of the eyeball. Since it is no longer connected to the optic nerves, it loses the function to transmit stimuli to the nerves, and then causes vision loss.</p>
     
-    <img src="https://github.com/Kingupdollar/kingupdollar.github.io/blob/main/final-project/images/B0015_shutterstock_1808646106.jpeg" style="width:40%;">
+    <img src="../images/B0015_shutterstock_1808646106.jpeg" style="width:40%;">
     
     <p>Symptoms include an increase in the number of floaters, flashes of light, and worsening of the outer part of the visual field. This may be described as a curtain over part of the field of vision. Without treatment permanent loss of vision may occur. However, since retinal detachment is painless, it is possible that patients would not be aware of the symptom until it has become serious and caused permanent vision loss. Therefore, it is extremely important to do eye check regularly and beware of any possible symptoms.<br><br> 
 Here are some common symptoms of retinal detachment:</p>
