--- a/final-project/lessons/quiz.html
+++ b/final-project/lessons/quiz.html
@@ -11,7 +11,7 @@
 
 <body>
   <div style="border-bottom-style: solid; border-width: 1px;">
-    <button class="button2">← Leave Course</button>
+    <input type="button" value="← Leave Course" class="button2" onclick="location.href='https://kingupdollar.github.io/final-project/'">
   </div>
   
   <div style="font-family: 'Roboto'; max-width: 1000px; margin:0px auto;">
@@ -88,8 +88,8 @@
     <p><br>After clicking on the summit button, your answer will be collected and you may see your performance on the next page. If you are not sure about the answers, you may go back to the lessons to check.</p>
     
     <div style="text-align:center;">
-      <button class="button3">Go back</button>
-      <button class="button4">Submit</button>
+      <input type="button" value="Go back" class="button3" onclick="location.href='https://kingupdollar.github.io/final-project/lessons/lesson4.html'">
+      <input type="button" value="Submit" class="button4" onclick="location.href=''">
     </div>
   
   </div>
