--- a/final-project/lessons/lesson1.html
+++ b/final-project/lessons/lesson1.html
@@ -73,6 +73,6 @@ The retina is the innermost, light-sensitive layer of tissue of the eye. If we c
   </div>
   
   </div>
-  
+  <script src="../scripts/scripts.js"></script>
 </body>
 </html>
