--- a/final-project/lessons/lesson1.html
+++ b/final-project/lessons/lesson1.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
       </p>
     </div>
     
-    <img src="kingupdollar.github.io/final-project/images/eye.png" style="width:100%;">
+    <img src="../images/eye.png" style="width:100%;">
     
 	  <p>The front visible part of the eye is made up of the whitish sclera, a colored iris, and the pupil. The outermost layer of an eyeball, known as the fibrous tunic, is composed of the cornea and sclera, which provide shape to the eye and support the deeper structures.<br><br>
 The eye includes a lens similar to lenses found in optical instruments such as cameras and the same physics principles can be applied. The pupil of the human eye is its aperture. Refraction in the cornea causes the effective aperture (the entrance pupil) to differ slightly from the physical pupil diameter.<br><br>
@@ -73,6 +73,6 @@ The retina is the innermost, light-sensitive layer of tissue of the eye. If we c
   </div>
   
   </div>
-  <script src="../scripts/scripts.js"></script>
+  <script src="../script/script.js"></script>
 </body>
 </html>
