--- a/final-project/index.html
+++ b/final-project/index.html
@@ -12,7 +12,7 @@
 <body>
   <div style="border-bottom-style: solid; border-width: 1px;">
     <input type="button" value="Home" class="button2" onclick="location.href='https://kingupdollar.github.io/final-project'">
-    <input type="button" value="Dashboard" class="button2" onclick="location.href=''">
+    <input type="button" value="Dashboard" class="button2" onclick="location.href='https://kingupdollar.github.io/final-project/lessons/dashboard.html'">
   </div>
   
   <div style="font-family: 'Roboto'; max-width: 1000px; margin:0px auto;">
