--- a/final-project/lessons/quiz.html
+++ b/final-project/lessons/quiz.html
@@ -89,7 +89,7 @@
     
     <div style="text-align:center;">
       <input type="button" value="Go back" class="button3" onclick="location.href='https://kingupdollar.github.io/final-project/lessons/lesson4.html'">
-      <input type="button" value="Submit" class="button4" onclick="location.href=''">
+      <input type="button" value="Submit" class="button4" onclick="location.href='https://kingupdollar.github.io/final-project/lessons/dashboard.html'">
     </div>
   
   </div>
