--- a/final-project/lessons/dashboard.html
+++ b/final-project/lessons/dashboard.html
@@ -23,7 +23,7 @@
 	  <p>Let's check if you can handle what we have covered so far!</p><br>
     
     <div class="performance">
-      <h3 align="center;">Your Performance</h3>
+      <h3>Your Performance</h3>
       <hr>
       <ul>
         <li>Question 1 ．．．．．．．．．．．．．．．．．．．</li>
@@ -36,7 +36,7 @@
     </div>
     
     <div class="performance">
-      <h3 align="center;">All Students' Performance</h3>
+      <h3>All Students' Performance</h3>
       <hr>
       <ul>
         <li>Question 1 ．．．．．．．．．．．．．．．．．．． % correct</li>
