--- a/final-project/index.html
+++ b/final-project/index.html
@@ -1,37 +1,42 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>Lesson 4: Retinal Detachment Treatments</title>
+  <meta charset="UTF-8">
+  <title>Lesson 4: Retinal Detachment Treatments</title>
+  <!--using google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+	
+  <!--link to css-->
   <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <!--top bar-->
   <div style="border-bottom-style: solid; border-width: 1px;">
     <input type="button" value="Home" class="button2" onclick="location.href='https://kingupdollar.github.io/final-project'">
     <input type="button" value="Dashboard" class="button2" onclick="location.href='https://kingupdollar.github.io/final-project/lessons/dashboard.html'">
   </div>
   
+  <!--constraining the area of infromation-->
   <div style="font-family: 'Roboto'; max-width: 1000px; margin:0px auto;">
   
 		
   <div style="margin: 30px;">
     <h1>Retinal Detachment: Symptoms, Causes and Treatments</h1>
-			<p>Retinal detachment is a severe eye disease that affects between 0.6 and 1.8 people per 10,000 per year. About 0.3% of people are affected at some point in their life. The retina sends visual images to the brain through the optic nerve. When detachment occurs, vision is blurred.A detached retina is a serious problem that can cause blindness unless it is treated.<br><br>
+	<p>Retinal detachment is a severe eye disease that affects between 0.6 and 1.8 people per 10,000 per year. About 0.3% of people are affected at some point in their life. The retina sends visual images to the brain through the optic nerve. When detachment occurs, vision is blurred.A detached retina is a serious problem that can cause blindness unless it is treated.<br><br>
 A detached retina won't heal on its own. It's important to get medical care as soon as possible so you have the best odds of keeping your vision. Any surgical procedure has some risks. The long-term outcomes depend on the duration of the detachment and whether the macula was detached. If treated earlier before the macula detaches outcomes are generally good.<br><br>
 Since there is no such thing as a retina transplant, the only chance to retain the vision is to detect the symptom as soon as possible and get appropriate treatment before the vision loss becomes irreversible. Therefore, it is important for everyone to check their eye regularly and be aware of any alarm for the symptom.</p><br>
 
-  <div class="objective">
-  <h3>Course Syllabus</h3>
-			<ol>
-				<li>The Structure of An Eyeball</li>
-				<li>Symptoms of Retinal Detachment</li>
-				<li>Risk Factors of Retinal Detachment</li>
-        <li>Retinal Detachment Treatments</li><br>
-			</ol>
+    <div class="objective">
+      <h3>Course Syllabus</h3>
+        <ol>
+	  <li>The Structure of An Eyeball</li>
+	  <li>Symptoms of Retinal Detachment</li>
+	  <li>Risk Factors of Retinal Detachment</li>
+          <li>Retinal Detachment Treatments</li><br>
+        </ol>
     </div>
     
     <div style="text-align:center;">
