--- a/accessibility2/project2.html
+++ b/accessibility2/project2.html
@@ -45,20 +45,20 @@
         <h2>Sign Up!</h2>
         <form id="sign-up-form">
           <div>
-            <label id="firstnamelabel" for=”firstname”>*First Name:</label><br> 
+            <label id="firstnamelabel" for=firstname>*First Name:</label><br> 
             <input id="firstname" name="firstname" type="text" size="30"><br>
             <p id="firstnamediv" class="error"></p><br>
 
-            <label id="middlenamelabel" for=”middlename”>Middle Name: (optional)</label><br> 
+            <label id="middlenamelabel" for=middlename>Middle Name: (optional)</label><br> 
             <input id="middlename" name="middlename" type="text" size="30"><br><br> 
 
-            <label id="lastnamelabel" for=”lastname”>*Last Name:</label><br> 
+            <label id="lastnamelabel" for=lastname>*Last Name:</label><br> 
             <input id="lastname" name="lastname" type="text" size="30"><br>
             <p id="lastnamediv" class="error"></p>
           </div>
 
           <div>
-            <label for=”email”>*Email:</label><br> 
+            <label for=email>*Email:</label><br> 
             <input id="email" name="email" type="email" size="60" placeholder="example@email.com">
             <p id="emaildiv" class="error"></p>
             <input id="emailpreference" name="emailpreference" type="checkbox" checked>
