--- a/accessibility2/project2.html
+++ b/accessibility2/project2.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="#link">Links</a></li> 
+          <li><a href="#links">Links</a></li> 
           <li><a href="#signup">Sign Up</a></li>
         </ul>
       </nav>
@@ -31,7 +31,7 @@
       <iframe width="100%" height="700px" src="https://youdescribe.org/embed/7tXZTLT7GQA?ad=61455dca3b2e2707ed89cc06"></iframe>
     
       <!--The hover effect will apper in more than color changes-->
-      <section id="link">
+      <section id="links">
         <h2>Links</h2>
         <ul>
           <li><a href="http://accessibility.cs.cmu.edu">Accessibility Research at CMU</a></li>
